[package]
name = "renderer"
version = "0.1.0"
authors = ["Stephen Molyneaux <WimbledonLabs@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "0.3.0"
minifb = "0.16.0"
ultraviolet = "0.4.6"
winapi = { version = "0.3.8", features = ["xinput"] }
